--- a/src/pages/services-page/services-page.scss
+++ b/src/pages/services-page/services-page.scss
@@ -14,3 +14,23 @@
 
 	padding: 40px 20px;
 }
+
+.services-page__submit-button {
+	border: none;
+	cursor: pointer;
+	padding: 10px 20px;
+	box-shadow: 0 5px 12px rgba(0, 0, 0, 0.3);
+	border-radius: 10px;
+	background-image: none;
+
+	transition: transform ease 0.1s;
+
+	&:hover {
+		background-image: linear-gradient(298deg, #da2c4d, #f8ab37);
+		color: #fff;
+	}
+
+	&:active {
+		transform: scale(0.98);
+	}
+}
