--- a/src/pages/services-page/services-page.scss
+++ b/src/pages/services-page/services-page.scss
@@ -10,24 +10,30 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
-	gap: 20px;
+	gap: 30px;
 
 	padding: 40px 20px;
 }
 
 .services-page__submit-button {
+	padding: 10px 20px;
 	border: none;
 	cursor: pointer;
-	padding: 10px 20px;
-	box-shadow: 0 5px 12px rgba(0, 0, 0, 0.3);
+
+	font-family: var(--basic-font);
+	font-size: var(--submit-button-text-size);
+	font-weight: var(--submit-button-text-weight);
+	color: var(--standart-black);
+
+	box-shadow: var(--basic-button-shadow);
 	border-radius: 10px;
 	background-image: none;
 
 	transition: transform ease 0.1s;
 
 	&:hover {
-		background-image: linear-gradient(298deg, #da2c4d, #f8ab37);
-		color: #fff;
+		background-image: var(--item-linear-gradient);
+		color: var(--standart-white);
 	}
 
 	&:active {
