--- a/src/components/services-list/services-list.scss
+++ b/src/components/services-list/services-list.scss
@@ -1,5 +1,22 @@
 .services-list {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: min-content 1fr;
+	grid-row-gap: 10px;
+}
+
+.services-list__title {
+	font-family: var(--basic-font);
+	font-size: var(--basic-block-title-text-size);
+	font-weight: var(--basic-block-title-text-weight);
+	color: var(--text-primary);
+}
+
+.services-list__list {
 	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
 	gap: 15px;
 }
 
@@ -15,28 +32,35 @@
 	width: 100%;
 	height: 100%;
 	padding: 10px 45px 10px 25px;
-	background-color: #f0eff3;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+
+	background-color: var(--surface);
+	box-shadow: var(--basic-overlay-box-shadow);
 	border-radius: 5px;
+	border: 1px solid var(--border);
+
+	font-family: var(--basic-font);
+	font-size: var(--service-item-text-size);
+	font-weight: var(--service-item-text-weight);
+	color: var(--text-primary);
+
 	cursor: pointer;
 	transition: all ease .3s;
 
 	&:hover {
-		box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+		box-shadow: var(--basic-overlay-hover-box-shadow);
 	}
 
 	&--active {
-
 		&::before {
 			position: absolute;
 			content: '';
 			top: 50%;
 			left: 50%;
 			transform: translate(-50%, -50%);
-			width: calc(100% + 4px);
-			height: calc(100% + 4px);
+			width: calc(100% + 6px);
+			height: calc(100% + 6px);
 			border-radius: 5px;
-			background-image: linear-gradient(298deg, #da2c4d, #f8ab37);
+			background-image: var(--item-linear-gradient);
 			z-index: -1;
 		}
 	}
