--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-	font-family: $basic-font;
+	font-family: var(--basic-font);
 }
 
 .visually-hidden {
