adaptive design correction

--- a/src/components/year-range/year-range.scss
+++ b/src/components/year-range/year-range.scss
@@ -1,5 +1,11 @@
+@import '../../variables/variables.scss';
+
 .year-range {
 	width: 300px;
+
+	@media (max-width: 400px) {
+		width: 100%;
+	}
 }
 
 .year-range__wrap {
