--- a/src/pages/services-page/services-page.scss
+++ b/src/pages/services-page/services-page.scss
@@ -1,3 +1,5 @@
+@import '../../variables/variables.scss';
+
 .services-page {
 	width: 100%;
 	height: 100%;
@@ -13,6 +15,10 @@
 	gap: 30px;
 
 	padding: 40px 20px;
+
+	@media (max-width: $mobile-width) {
+		padding: 20px 10px;
+	}
 }
 
 .services-page__submit-button {
