--- a/src/components/selected-result/selected-result.scss
+++ b/src/components/selected-result/selected-result.scss
@@ -1,15 +1,21 @@
 .services-result {
-	width: 400px;
-	height: 500px;
+	min-width: 300px;
+	height: 400px;
 	box-shadow: 0 10px 18px rgba(0, 0, 0, 0.3);
 	padding: 10px 20px;
+
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: repeat(3, min-content);
+	grid-row-gap: 30px;
 }
 
 .services-result__title {
-	font-weight: 600;
+	font-family: var(--basic-font);
+	font-size: var(--basic-block-title-text-size);
+	font-weight: var(--basic-block-title-text-weight);
+
 	text-transform: uppercase;
-	text-align: center;
-	font-size: 30px;
 	text-align: center;
 	background: linear-gradient(90deg, rgba(150, 48, 30, 1) 0%, rgba(199, 201, 88, 1) 10%, rgba(28, 147, 46, 1) 20%, rgba(74, 165, 168, 1) 30%, rgba(89, 90, 165, 1) 40%, rgba(84, 16, 67, 1) 50%, rgba(28, 58, 63, 1) 60%, rgba(82, 175, 183, 1) 70%, rgba(78, 170, 76, 1) 80%, rgba(150, 48, 30, 1) 90%, rgba(199, 201, 88, 1) 100%);
 	background-size: 1000% 100%;
