--- a/src/components/selected-result/selected-result.scss
+++ b/src/components/selected-result/selected-result.scss
@@ -1,5 +1,5 @@
 .services-result {
-	min-width: 300px;
+	width: 300px;
 	height: 400px;
 	box-shadow: 0 10px 18px rgba(0, 0, 0, 0.3);
 	padding: 10px 20px;
